...
@Composable
private fun SettingsSingleChoiceDialogPreview() {
    HarmonicTheme {
        SingleChoiceDialog(
            title = "Starting page",
            options = listOf(
                "top" to "Top Stories",
                "new" to "New Stories",
                "best" to "Best Stories",
            ),
            selected = "top",
            onDismiss = {},
            onSelected = {},
        )
    }
...
