...
                <TextView
                    android:id="@+id/story_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/product_sans"
                    android:text="Algorithm breaks speed limit for solving linear equations"
                    android:textColor="?attr/storyColorNormal"
                    android:textSize="17.5sp"
                    android:textStyle="bold" />
            </com.simon.harmonichackernews.utils.StoryTitleBaselineLayout>

            <ImageView
...
